dz_36_2 output corrected.

--- a/Lesson_36/dz_36_2.ipynb
+++ b/Lesson_36/dz_36_2.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e71f3ed",
+   "id": "94907708",
    "metadata": {},
    "source": [
     "### Model Score Using KFold"
@@ -162,40 +162,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
-   "id": "ead0a2e4",
+   "execution_count": 240,
+   "id": "7f0eac3b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "********************************************************************************************\n",
-      "Iterations                    Training Set(indexes)                      Testing Set(indexes)\n",
-      "********************************************************************************************\n",
-      "Train 1 : 38 Test: 10\n",
-      "Train 2 : 38 Test: 10\n",
-      "Train 3 : 38 Test: 10\n",
-      "Train 4 : 39 Test: 9\n",
-      "Train 5 : 39 Test: 9\n"
+      "***************************************************\n",
+      "Iterations Training Set   Testing Set\n",
+      "***************************************************\n",
+      "Train 1   :   38          Test: 10\n",
+      "Train 2   :   38          Test: 10\n",
+      "Train 3   :   38          Test: 10\n",
+      "Train 4   :   39          Test: 9\n",
+      "Train 5   :   39          Test: 9\n"
      ]
     }
    ],
    "source": [
     "kf =KFold(n_splits=5, shuffle=True, random_state=5)\n",
     "\n",
-    "print('********************************************************************************************')\n",
-    "print('{}{:^62} {}'.format('Iterations','Training Set(indexes)', 'Testing Set(indexes)'))\n",
-    "print('********************************************************************************************')\n",
+    "print('***************************************************')\n",
+    "print('{}{:^15} {}'.format('Iterations','Training Set', 'Testing Set'))\n",
+    "print('***************************************************')\n",
     "count = 1\n",
     "for train_index, test_index in kf.split(X, y):\n",
-    "    print(f'Train {count} :', len(train_index), 'Test:', len(test_index))\n",
+    "    print(f'Train {count}   :  ', len(train_index), '         Test:', len(test_index))\n",
     "    count += 1"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9ec6eccb",
+   "id": "97005ea7",
    "metadata": {},
    "source": [
     "#### Decision Tree Regressor"
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "56c8bc78",
+   "id": "90ebcf37",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a58ef1aa",
+   "id": "663c5932",
    "metadata": {},
    "source": [
     "#### Linear Regression"
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "b48dad85",
+   "id": "1640495a",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "160e869c",
+   "id": "81a164ed",
    "metadata": {},
    "source": [
     "#### Random Forest Regressor"
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "8ef8b78f",
+   "id": "8d7f07ee",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00d33ec5",
+   "id": "c5ca0f39",
    "metadata": {},
    "source": [
     "### Model Score Using Stratified KFold"
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "id": "54f9b6d4",
+   "id": "04c90f70",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be31b765",
+   "id": "d688f5ee",
    "metadata": {},
    "source": [
     "#### Using Tree Decision Classifier"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "8ce7b416",
+   "id": "23d327da",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b6ce63b",
+   "id": "2e923e0f",
    "metadata": {},
    "source": [
     "#### Using Logistic Regression"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "8910dea1",
+   "id": "9cbddc0d",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c56c27f",
+   "id": "0de305a0",
    "metadata": {},
    "source": [
     "#### Using Random Forest Classifier"
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "e9639f39",
+   "id": "ba5e9791",
    "metadata": {},
    "outputs": [
     {
