--- a/Lesson_36/dz_36_2.ipynb
+++ b/Lesson_36/dz_36_2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 57,
    "id": "e8c4a988",
    "metadata": {},
    "outputs": [],
@@ -33,12 +33,12 @@
    "id": "7503403c",
    "metadata": {},
    "source": [
-    "#### Імпортуємо файл, готуємо датасет:"
+    "#### Імпорт даних, підготовка датасету:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 58,
    "id": "6b3025c5",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "4                 410  "
       ]
      },
-     "execution_count": 224,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,29 +141,26 @@
     "petrol_cons.dropna(axis=0, subset=['Petrol_Consumption'], inplace=True)\n",
     "\n",
     "y = petrol_cons.Petrol_Consumption          \n",
-    "X = petrol_cons.drop(['Petrol_Consumption'], axis=1)\n",
+    "petrol_cons.drop(['Petrol_Consumption'], axis=1, inplace=True)\n",
     "\n",
     "numeric_cols = [cname for cname in petrol_cons.columns if petrol_cons[cname].dtype in ['int64', 'float64']]\n",
-    "# X = petrol_cons[numeric_cols].copy()\n",
+    "X = petrol_cons[numeric_cols].copy()\n",
     "\n",
-    "pd.concat([X, y], axis=1).head()\n",
-    "# y = np.array(y).reshape(-1, 1)\n",
-    "# y.iloc[1]\n",
-    "# X.info()"
+    "pd.concat([X, y], axis=1).head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "94907708",
+   "id": "edaa3772",
    "metadata": {},
    "source": [
-    "### Model Score Using KFold"
+    "#### Розділення даних для К-кратної крос-валідації"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
-   "id": "7f0eac3b",
+   "execution_count": 59,
+   "id": "6b410512",
    "metadata": {},
    "outputs": [
     {
@@ -195,16 +192,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97005ea7",
+   "id": "8a5d296d",
    "metadata": {},
    "source": [
-    "#### Decision Tree Regressor"
+    "#### Древовидна регресія"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
-   "id": "90ebcf37",
+   "execution_count": 60,
+   "id": "beef1ecc",
    "metadata": {},
    "outputs": [
     {
@@ -224,17 +221,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "5871c4ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For max depth: 1\n",
+      "rmse = 99.80850120520277\n",
+      "For max depth: 2\n",
+      "rmse = 91.15402146288433\n",
+      "For max depth: 3\n",
+      "rmse = 97.04707507281668\n",
+      "For max depth: 4\n",
+      "rmse = 90.53644306670793\n",
+      "For max depth: 5\n",
+      "rmse = 90.37699265635575\n",
+      "For max depth: 6\n",
+      "rmse = 93.17066848192682\n",
+      "For max depth: 7\n",
+      "rmse = 93.91929695945358\n",
+      "For max depth: 8\n",
+      "rmse = 94.68341694533656\n",
+      "For max depth: 9\n",
+      "rmse = 87.6828122014546\n",
+      "For max depth: 10\n",
+      "rmse = 93.87136588616005\n",
+      "\n",
+      "Мінімальне значення rmse = 87.68 \n",
+      "Глибина дерева рішень: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_depth = [1,2,3,4,5,6,7,8,9,10]\n",
+    "\n",
+    "rmse_dict ={}\n",
+    "for val in max_depth:\n",
+    "    score = cross_val_score(tree.DecisionTreeRegressor(max_depth= val, random_state= 5), X, y, cv= kf, scoring=\"neg_mean_squared_error\")\n",
+    "    print(f'For max depth: {val}')\n",
+    "    rmse = (score.mean()*-1)**0.5\n",
+    "    print(f'rmse = {rmse}')\n",
+    "    rmse_dict[rmse] = val\n",
+    "\n",
+    "print(f'\\nМінімальне значення rmse = {min(rmse_dict):.2f} \\nГлибина дерева рішень: {rmse_dict[min(rmse_dict)]}')    \n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "663c5932",
+   "id": "a6b61cda",
    "metadata": {},
    "source": [
-    "#### Linear Regression"
+    "##### Шляхом перебору гіперпараметрів моделі вдалось незначно зменшити квадратичну похибку до 87.68.  Цей показник досягається при максимальній глибині дерева 9.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0718425",
+   "metadata": {},
+   "source": [
+    "#### Лінійна регресія"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
-   "id": "1640495a",
+   "execution_count": 62,
+   "id": "aefd6f08",
    "metadata": {},
    "outputs": [
     {
@@ -255,16 +311,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81a164ed",
+   "id": "1e80c6fb",
    "metadata": {},
    "source": [
-    "#### Random Forest Regressor"
+    "#### Регресія на основі випадкового лісу"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
-   "id": "8d7f07ee",
+   "execution_count": 63,
+   "id": "4f1f5531",
    "metadata": {},
    "outputs": [
     {
@@ -284,170 +340,66 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c5ca0f39",
-   "metadata": {},
-   "source": [
-    "### Model Score Using Stratified KFold"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 228,
-   "id": "04c90f70",
+   "execution_count": 64,
+   "id": "e06023cf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold:1, Train set: 24, Test set:24\n",
-      "Fold:2, Train set: 24, Test set:24\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:676: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=2.\n",
-      "  warnings.warn(\n"
+      "For estimators: 50\n",
+      "rmse = 78.56246707486271\n",
+      "For estimators: 100\n",
+      "rmse = 77.20810541358696\n",
+      "For estimators: 150\n",
+      "rmse = 76.07790640301997\n",
+      "For estimators: 200\n",
+      "rmse = 76.23762888094623\n",
+      "For estimators: 250\n",
+      "rmse = 75.76281561892131\n",
+      "For estimators: 300\n",
+      "rmse = 75.18478572568578\n",
+      "For estimators: 350\n",
+      "rmse = 74.82439619447979\n",
+      "For estimators: 400\n",
+      "rmse = 75.01420964325878\n",
+      "\n",
+      "Мінімальне значення rmse = 74.82 \n",
+      "Оцінювач: 350\n"
      ]
     }
    ],
    "source": [
-    "kf = StratifiedKFold(n_splits= 2, shuffle=True, random_state=13)\n",
+    "estimators = [50, 100, 150, 200, 250, 300, 350, 400]\n",
     "\n",
-    "cnt = 1\n",
-    "for train_index, test_index in kf.split(X, y):\n",
-    "    print(f'Fold:{cnt}, Train set: {len(train_index)}, Test set:{len(test_index)}')\n",
-    "    cnt+=1"
+    "rmse_dc ={}\n",
+    "for count in estimators:\n",
+    "    score = cross_val_score(ensemble.RandomForestRegressor(n_estimators= count, random_state= 5), X, y, cv= kf, scoring=\"neg_mean_squared_error\")\n",
+    "    print(f'For estimators: {count}')\n",
+    "    rmse = (score.mean()*-1)**0.5\n",
+    "    print(f'rmse = {rmse}')\n",
+    "    rmse_dc[rmse] = count\n",
+    "\n",
+    "print(f'\\nМінімальне значення rmse = {min(rmse_dc):.2f} \\nОцінювач: {rmse_dc[min(rmse_dc)]}')   "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d688f5ee",
+   "id": "33e2a778",
    "metadata": {},
    "source": [
-    "#### Using Tree Decision Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 213,
-   "id": "23d327da",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scores for each fold are: [0. 0.]\n",
-      "Average score: 0.00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:676: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=2.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "score = cross_val_score(tree.DecisionTreeClassifier(random_state= 5), X, y, cv= kf, scoring=\"accuracy\")\n",
-    "print(f'Scores for each fold are: {score}')\n",
-    "print(f'Average score: {\"{:.2f}\".format(score.mean())}')"
+    "##### Шляхом перебору гіперпараметрів моделі вдалось незначно зменшити квадратичну похибку до 74.82. Цей результат досягається при значенні показника оцінки 350."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2e923e0f",
+   "id": "45ced090",
    "metadata": {},
    "source": [
-    "#### Using Logistic Regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 190,
-   "id": "9cbddc0d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scores for each fold are: [0. 0.]\n",
-      "Average score: 0.00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:676: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=2.\n",
-      "  warnings.warn(\n",
-      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
-      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    }
-   ],
-   "source": [
-    "score = cross_val_score(linear_model.LogisticRegression(random_state= 13), X, y, cv= kf, scoring=\"accuracy\")\n",
-    "print(f'Scores for each fold are: {score}')\n",
-    "print(f'Average score: {\"{:.2f}\".format(score.mean())}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0de305a0",
-   "metadata": {},
-   "source": [
-    "#### Using Random Forest Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 231,
-   "id": "ba5e9791",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scores for each fold are: [0. 0.]\n",
-      "Average score: 0.00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:676: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=2.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "score = cross_val_score(ensemble.RandomForestClassifier(random_state= 42), X, y, cv= kf, scoring=\"accuracy\")\n",
-    "print(f'Scores for each fold are: {score}')\n",
-    "print(f'Average score: {\"{:.2f}\".format(score.mean())}')"
+    "#### Моделі випадкових лісів і древовидної регресії вдалося трохи покращити за допомогою тренування. Але все одно, за кінцевими підсумками трьох збудованих моделей найкращі результати показує модель лінійної регресії. Принаймні, стандартна похибка при використанні цієї моделі - мінімальна.\n",
+    "#### Для тренування і оцінювання моделей обрано К-кратну валідацію, оскільки це найпоширеніший метод тренування моделей. Застотсувати стратифіковану крос-валідацію немає можливості, оскільки предиктор не розподілений на певні класи."
    ]
   }
  ],
