dz_37_1 summary was edited.

--- a/Lesson_37/dz_37_1.ipynb
+++ b/Lesson_37/dz_37_1.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aba1478e",
+   "id": "40b12c46",
    "metadata": {},
    "source": [
     "#### Linear regression"
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "6601da0a",
+   "id": "f35047ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "0266747e",
+   "id": "0d4a3d9a",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ecdee0b",
+   "id": "114854d7",
    "metadata": {},
    "source": [
     "#### Polynomial regression"
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "f41ffcbd",
+   "id": "b451e3be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "f4a0dd26",
+   "id": "6996cf89",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "bd839789",
+   "id": "4fca80ab",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a743f5ce",
+   "id": "7301b12a",
    "metadata": {},
    "source": [
     "#### Візуалізація:"
@@ -308,10 +308,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3c7b006",
+   "id": "bb7f07be",
    "metadata": {},
    "source": [
-    "#### Показники mae i rmse у поліноміальній регресії набагато нижчі від відповідних показників лінійної регресії. Також візуально видно, що поліноміальної модель добре описує дані, принаймні набагато краще, ніж лінійна. Немає сенсу ускладнювати модель і додавати нові ступені многочлену, бо тоді модель стає переобученою і прив'язується до конкретних даних."
+    "#### Показники mae i rmse у поліноміальній регресії набагато нижчі від відповідних показників лінійної регресії. Також візуально видно, що поліноміальна модель добре описує дані, принаймні набагато краще, ніж лінійна. Немає сенсу ускладнювати модель і додавати нові ступені многочлену, бо тоді модель перенавчається і прив'язується до конкретних даних."
    ]
   }
  ],
