Summary was edited.

--- a/Lesson_39/dz_39.ipynb
+++ b/Lesson_39/dz_39.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "812dd6a5",
+   "id": "5efdd98d",
    "metadata": {},
    "source": [
     "### Завдання.\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f62a337c",
+   "id": "ea5247c7",
    "metadata": {},
    "source": [
     "##### Загрузка даних"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcc52896",
+   "id": "40e4e088",
    "metadata": {},
    "source": [
     "##### Побудова моделі дерева прийняття рішень"
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a94a8ea7",
+   "id": "c1516e35",
    "metadata": {},
    "source": [
     "##### Класифікація за допомогою моделі, оцінка її якості"
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9d16d40",
+   "id": "6dd3324a",
    "metadata": {},
    "source": [
     "##### Побудова дерева прийнятя рішень"
@@ -426,10 +426,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43d55076",
+   "id": "d3419f6c",
    "metadata": {},
    "source": [
-    "#### Побудована модель з точністю 100% класифікує іриси по двом ознакам - petal width (ширина пелюстки) і petal length (довжина пелюстки). Дві інших ознаки sepal length і sepal width не є суттєвими для класифікації ірисів."
+    "#### Побудована модель з точністю 100% класифікує іриси за допомогою двох ознакак: petal width (ширина пелюстки) і petal length (довжина пелюстки). Дві інших ознаки sepal length і sepal width не є суттєвими для класифікації ірисів."
    ]
   }
  ],
