--- a/Lesson_40/dz_40.ipynb
+++ b/Lesson_40/dz_40.ipynb
@@ -10,13 +10,14 @@
     "+ у StackingClassifier як базові алгоритми встановіть LogisticRegression та DecisionTreeClassifier, як фінальну модель – SVC;\n",
     "+ у BaggingClassifier як базовий алгоритм встановіть DecisionTreeClassifier;\n",
     "+ у AdaBoostClassifier як базовий алгоритм встановіть LogisticRegression\n",
-    "+ у XGBСlassifier як базовий алгоритм (booster) встановіть ‘gbtree’.\n",
-    "+ У зведеній таблиці порівняйте результати класифікацій, наведених у коді, із класифікаціями, що отримані вами.\n"
+    "+ у XGBСlassifier як базовий алгоритм (booster) встановіть ‘gbtree’.  \n",
+    "\n",
+    "У зведеній таблиці порівняйте результати класифікацій, наведених у коді, із класифікаціями, що отримані вами.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "id": "d4041408",
    "metadata": {},
    "outputs": [],
@@ -32,6 +33,9 @@
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sb\n",
+    "\n",
     "\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn import preprocessing"
@@ -47,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "id": "f3d055d7",
    "metadata": {},
    "outputs": [],
@@ -71,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "id": "b0b05561",
    "metadata": {},
    "outputs": [],
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 12,
    "id": "7783bd5c",
    "metadata": {},
    "outputs": [
@@ -94,7 +98,7 @@
        "                   final_estimator=SVC())"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 13,
    "id": "19fb1ce6",
    "metadata": {},
    "outputs": [
@@ -132,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 14,
    "id": "7c4190a4",
    "metadata": {},
    "outputs": [
@@ -142,7 +146,7 @@
        "BaggingClassifier(base_estimator=DecisionTreeClassifier(), random_state=12)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 15,
    "id": "6a318fae",
    "metadata": {},
    "outputs": [
@@ -181,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 16,
    "id": "1543e3f7",
    "metadata": {},
    "outputs": [
@@ -192,7 +196,7 @@
        "                   random_state=12)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 17,
    "id": "724ef6aa",
    "metadata": {},
    "outputs": [
@@ -231,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 18,
    "id": "18af7bab",
    "metadata": {},
    "outputs": [],
@@ -241,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 19,
    "id": "e50612ad",
    "metadata": {},
    "outputs": [
@@ -261,7 +265,7 @@
        "              predictor=None, random_state=None, ...)"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 20,
    "id": "f3f0b49a",
    "metadata": {},
    "outputs": [
@@ -291,10 +295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 26,
    "id": "4364af8a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Таблиця отриманих результатів з використанням ансамблів моделей:\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -414,7 +425,7 @@
        "7                     NaN     0.912281  homework  "
       ]
      },
-     "execution_count": 169,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,8 +440,10 @@
     "\n",
     "hw_results = pd.DataFrame(ensembles)\n",
     "les_results = pd.read_csv('les_results.csv')\n",
-    "res = pd.concat([les_results, hw_results])\n",
-    "res.sort_values('Ensemble').reset_index(drop=True)\n"
+    "res = pd.concat([les_results, hw_results]).sort_values('Ensemble').reset_index(drop=True)\n",
+    "print(\"Таблиця отриманих результатів з використанням ансамблів моделей:\")\n",
+    "res\n",
+    "\n"
    ]
   }
  ],
