Task was added.

--- a/Lesson_44/dz_44_2.ipynb
+++ b/Lesson_44/dz_44_2.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1b87cc43",
+   "metadata": {},
+   "source": [
+    "### Завдання.\n",
+    "Заповніть пропущені значення в датасеті з файлу trayn.csv. Обґрунтуйте вибір способу заповнення пропущених значень."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 361,
    "id": "f657962c",
    "metadata": {},
    "outputs": [],
@@ -15,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "150ffd5a",
+   "id": "ac5e34d2",
    "metadata": {},
    "source": [
     "### Загрузка даних та візуалізація відсутніх значень:"
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 362,
    "id": "b49c5f54",
    "metadata": {},
    "outputs": [
@@ -165,7 +174,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 345,
+     "execution_count": 362,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,8 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
-   "id": "a9423823",
+   "execution_count": 363,
+   "id": "c7a512bd",
    "metadata": {
     "scrolled": true
    },
@@ -189,7 +198,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 363,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -211,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21cff9ce",
+   "id": "7d6452fa",
    "metadata": {},
    "source": [
     "### Аналіз та заповнення відсутніх значень:"
@@ -219,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 364,
    "id": "30b8e7d6",
    "metadata": {},
    "outputs": [
@@ -241,7 +250,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 364,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d7f279d",
+   "id": "f435614b",
    "metadata": {},
    "source": [
     "##### Атрибут Cabin"
@@ -260,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 365,
    "id": "a77aa28c",
    "metadata": {},
    "outputs": [],
@@ -270,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
-   "id": "5de657a4",
+   "execution_count": 366,
+   "id": "95ad1e2c",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +331,7 @@
        "True   0.299854"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 366,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,8 +342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
-   "id": "5fa5a448",
+   "execution_count": 367,
+   "id": "1eba663d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b1860af",
+   "id": "0cd6c57c",
    "metadata": {},
    "source": [
     "##### Атрибут Embarked"
@@ -351,8 +360,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
-   "id": "d1a9304a",
+   "execution_count": 368,
+   "id": "7507d23b",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +373,7 @@
        "Name: Embarked, dtype: int64"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 368,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,8 +385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
-   "id": "a3fcdf65",
+   "execution_count": 369,
+   "id": "e31003c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "debd4880",
+   "id": "d9bfabe0",
    "metadata": {},
    "source": [
     "##### Атрибут Age"
@@ -394,8 +403,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
-   "id": "df54cead",
+   "execution_count": 370,
+   "id": "32acdef8",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +416,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 370,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,8 +427,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
-   "id": "3e1c074b",
+   "execution_count": 371,
+   "id": "39c6c438",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,8 +437,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
-   "id": "f3b3c313",
+   "execution_count": 372,
+   "id": "2a6c15a1",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +579,7 @@
        "4      0            373450   8.0500      0        S  "
       ]
      },
-     "execution_count": 357,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "432c6174",
+   "id": "d2188eeb",
    "metadata": {},
    "source": [
     "### Візуалізація цілосності даних:"
@@ -590,8 +599,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
-   "id": "9a4611aa",
+   "execution_count": 373,
+   "id": "8d5700d0",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +609,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 373,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -622,8 +631,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
-   "id": "c5446d21",
+   "execution_count": 374,
+   "id": "15e8b1ce",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a774edb",
+   "id": "6e1b2376",
    "metadata": {},
    "source": [
     "### Обґрунтування:"
@@ -666,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc5487cc",
+   "id": "8b9e6b60",
    "metadata": {},
    "source": [
     "Цільовий датасет мав три атрибути з відсутними даними: Age (вік), Cabin (номер каюти) і Embarked (порт посадки пасажира).\n",
