Some small edits.

--- a/Lesson_44/dz_44_1.ipynb
+++ b/Lesson_44/dz_44_1.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66afc949",
+   "id": "7e6a9f97",
    "metadata": {},
    "source": [
     "#### Загрузка, та підготовка даних."
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2be407e6",
+   "id": "bb8fca98",
    "metadata": {},
    "source": [
     "#### Відображення даних."
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f3adca4",
+   "id": "3c97360c",
    "metadata": {},
    "source": [
     "#### Перевірка гіпотези, щодо нормальності розподілу характеристики Age."
@@ -311,10 +311,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "606ce8c8",
+   "id": "c816e4fb",
    "metadata": {},
    "source": [
-    "#### Застосування бібліотеки Fitter, для з'ясування розподілу."
+    "#### Застосування бібліотеки Fitter  для з'ясування розподілу."
    ]
   },
   {
@@ -329,15 +329,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "b96e470d",
+   "execution_count": 27,
+   "id": "dc7bb476",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fitting 10 distributions: 100%|██████████| 10/10 [00:00<00:00, 26.74it/s]\n"
+      "Fitting 10 distributions: 100%|██████████| 10/10 [00:00<00:00, 26.46it/s]\n"
      ]
     },
     {
@@ -435,21 +435,21 @@
        "cauchy    0.000011  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f = Fitter(age_clear,distributions=get_common_distributions())\n",
-    "f.fit()\n",
-    "f.summary()"
+    "ft = Fitter(age_clear,distributions=get_common_distributions())\n",
+    "ft.fit()\n",
+    "ft.summary()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "cac385c6",
+   "id": "7983166e",
    "metadata": {},
    "outputs": [
     {
@@ -471,11 +471,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af7cd80e",
+   "id": "c53518d8",
    "metadata": {},
    "source": [
     "### Висновок.\n",
-    "Проведені тести дозволяють відхилити гіпотезу про нормальність розподілу властивості Age.\n",
+    "Проведені тести дозволяють відхилити гіпотезу про нормальність розподілу властивості Age.  \n",
     "Найбільш відповідним розподілом для Age є логнормальний розподіл."
    ]
   }
