Some small edits.

--- a/Lesson_44/dz_44_1.ipynb
+++ b/Lesson_44/dz_44_1.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66afc949",
+   "id": "31b4c1ed",
    "metadata": {},
    "source": [
     "#### Загрузка, та підготовка даних."
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2be407e6",
+   "id": "d496669b",
    "metadata": {},
    "source": [
     "#### Відображення даних."
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f3adca4",
+   "id": "d5530b64",
    "metadata": {},
    "source": [
     "#### Перевірка гіпотези, щодо нормальності розподілу характеристики Age."
@@ -311,10 +311,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "606ce8c8",
+   "id": "aafbcdb9",
    "metadata": {},
    "source": [
-    "#### Застосування бібліотеки Fitter, для з'ясування розподілу."
+    "#### Застосування бібліотеки Fitter  для з'ясування розподілу."
    ]
   },
   {
@@ -329,15 +329,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "b96e470d",
+   "execution_count": 27,
+   "id": "8c7eeccb",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fitting 10 distributions: 100%|██████████| 10/10 [00:00<00:00, 26.74it/s]\n"
+      "Fitting 10 distributions: 100%|██████████| 10/10 [00:00<00:00, 26.46it/s]\n"
      ]
     },
     {
@@ -435,21 +435,21 @@
        "cauchy    0.000011  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f = Fitter(age_clear,distributions=get_common_distributions())\n",
-    "f.fit()\n",
-    "f.summary()"
+    "ft = Fitter(age_clear,distributions=get_common_distributions())\n",
+    "ft.fit()\n",
+    "ft.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "cac385c6",
+   "execution_count": 28,
+   "id": "aa7df740",
    "metadata": {},
    "outputs": [
     {
@@ -460,22 +460,22 @@
        "  'scale': 106.78081758772217}}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f.get_best()"
+    "ft.get_best()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "af7cd80e",
+   "id": "b2ca03a5",
    "metadata": {},
    "source": [
     "### Висновок.\n",
-    "Проведені тести дозволяють відхилити гіпотезу про нормальність розподілу властивості Age.\n",
+    "Проведені тести дозволяють відхилити гіпотезу про нормальність розподілу властивості Age.  \n",
     "Найбільш відповідним розподілом для Age є логнормальний розподіл."
    ]
   }
