Some small edits.

--- a/Lesson_44/dz_44_1.ipynb
+++ b/Lesson_44/dz_44_1.ipynb
@@ -256,7 +256,7 @@
    "id": "9f3adca4",
    "metadata": {},
    "source": [
-    "#### Перевірка гіпотези, щодо нормальності розподілу характеристики Age."
+    "#### Перевірка гіпотези щодо нормальності розподілу характеристики Age."
    ]
   },
   {
@@ -314,7 +314,7 @@
    "id": "606ce8c8",
    "metadata": {},
    "source": [
-    "#### Застосування бібліотеки Fitter, для з'ясування розподілу."
+    "#### Застосування бібліотеки Fitter для з'ясування розподілу."
    ]
   },
   {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "b96e470d",
    "metadata": {},
    "outputs": [
@@ -435,20 +435,20 @@
        "cauchy    0.000011  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f = Fitter(age_clear,distributions=get_common_distributions())\n",
-    "f.fit()\n",
-    "f.summary()"
+    "ft = Fitter(age_clear,distributions=get_common_distributions())\n",
+    "ft.fit()\n",
+    "ft.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "cac385c6",
    "metadata": {},
    "outputs": [
@@ -460,13 +460,13 @@
        "  'scale': 106.78081758772217}}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f.get_best()"
+    "ft.get_best()"
    ]
   },
   {
@@ -475,7 +475,7 @@
    "metadata": {},
    "source": [
     "### Висновок.\n",
-    "Проведені тести дозволяють відхилити гіпотезу про нормальність розподілу властивості Age.\n",
+    "Проведені тести дозволяють відхилити гіпотезу про нормальність розподілу властивості Age.  \n",
     "Найбільш відповідним розподілом для Age є логнормальний розподіл."
    ]
   }
