Task text was added.

--- a/Lesson_43/dz_43.ipynb
+++ b/Lesson_43/dz_43.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fdcefb74",
+   "metadata": {},
+   "source": [
+    "### Завдання:\n",
+    "\n",
+    "Застосуйте описані в лекції методи відбору ознак, використовуючи датасет ірісів Фішера."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 292,
    "id": "b90251cf",
@@ -1009,7 +1019,7 @@
    "id": "615fe428",
    "metadata": {},
    "source": [
-    "##### Застосування моделі логістичної регресії для класифікації ірисів на даному датасеті дозволяє отримати достатньо високий показник якості моделі. Але в деяких випадках показник якості можливо покращити. Наприклад, при застосуванні методів фільтрації даних Variance Treshold і Select K Best."
+    "### Застосування моделі логістичної регресії для класифікації ірисів на даному датасеті дозволяє отримати достатньо високий показник якості моделі. Але в деяких випадках показник якості можливо покращити. Наприклад, при застосуванні методів фільтрації даних Variance Treshold і Select K Best."
    ]
   }
  ],
